--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
      <!-- Create a header element  -->
-
+    <header></header>
     <!-- Inside the header, add an <h1> element containing your name -->
     <h1>Bishar Yusuf</h1>
     
